# claudex-guard

./: .eslintrc.json  .gitignore  APP_CONTEXT.md  CLAUDE.local.md  README.md  package.json  pyproject.toml
configs/: claudex-python.md
docs/update-prompts/: python.md
research/: hook-integration-behavior.md  python-dependencies-analysis.md
research/test-scenarios/: clean.py  legacy_test_violations.py  syntax_error.py  violations.py
src/claudex_guard/: __init__.py  main.py
src/claudex_guard/core/: __init__.py  base_enforcer.py  config.py  project_cache.py  utils.py  violation.py  violation_db.py  violation_memory.py
src/claudex_guard/enforcers/: __init__.py  go.py  python.py  rust.py  typescript.py
src/claudex_guard/hooks/: __init__.py  pre_hook.py
src/claudex_guard/scripts/: __init__.py  python.py  python_auto_fixer.py  python_monolithic_backup.py
src/claudex_guard/services/: __init__.py  auto_fixer.py  go_auto_fixer.py  rust_auto_fixer.py  typescript_auto_fixer.py
src/claudex_guard/standards/: __init__.py  go_patterns.py  python_patterns.py  rust_patterns.py  typescript_patterns.py
tests/: test_ast_pattern_detection.py  test_comprehensive_ast_detection.py  test_core_components.py  test_memory_location.py  test_mock_detection.py  test_mock_detection_integration.py  test_multi_language_integration.py  test_phase1_standards_coverage.py  test_phase2_comprehensive.py  test_project_root_detection.py  test_python_enforcer_integration.py  test_python_patterns.py  test_security_enforcement.py
