[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudex-guard"
version = "0.3.5"
description = "Automated code quality enforcement for AI-assisted development workflows"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rudy Ruiz", email = "rudy@voidwire.info"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.9.0",  # Required for Python auto-fixing
    "mypy>=1.15.0",  # Required for type checking in Python enforcer
    "pyyaml>=6.0",  # Required for loading .claudex-guard.yaml config
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
    "hypothesis>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/nickpending/claudex-guard"
Repository = "https://github.com/nickpending/claudex-guard"
Issues = "https://github.com/nickpending/claudex-guard/issues"

[project.scripts]
claudex-guard = "claudex_guard.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claudex_guard"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Language enforcers that shell out to linters/compilers
"src/claudex_guard/enforcers/python.py" = ["S603", "S607"]
"src/claudex_guard/standards/typescript_patterns.py" = ["S603", "S607"]
"src/claudex_guard/standards/rust_patterns.py" = ["S603", "S607"]
"src/claudex_guard/standards/go_patterns.py" = ["S603", "S607"]
# Auto-fixers shell out to formatters/linters
"src/claudex_guard/services/auto_fixer.py" = ["S603", "S607"]
"src/claudex_guard/services/typescript_auto_fixer.py" = ["S603", "S607"]
"src/claudex_guard/services/rust_auto_fixer.py" = ["S603", "S607"]
"src/claudex_guard/services/go_auto_fixer.py" = ["S603", "S607"]
# Test files legitimately use assert and subprocess
"tests/**/*.py" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true